c14-productionizing/Chapter 14/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway

metadata:
  name: user-gateway
  
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
